@page RN40 Release notes for PAPILO 4.0

@section RN400 PaPILO 4.0.0

Features
--------

- CliqueProbing exploits datastructure present in the problem (cliques) during Probing (PAPILO_API_VERSION 12)

Performance improvements
------------------------

Interface changes
-----------------

### New API functions

### Changed parameters

### New parameters with default values

- probing.maxCliqueLength = 150: maximal size of cliques that are probed on (PAPILO_API_VERSION 12)
- probing.max_probed_clique_vars = 3000: maximal number of variables in cliques that are probed on (PAPILO_API_VERSION 12)
- probing.ratiocoveredcliquevars = 2: maximal ratio of variables in clique that are also covered by other probed cliques (PAPILO_API_VERSION 12)
- probing.initialbatchsize = 2: initial number of probed cliques (PAPILO_API_VERSION 12)
- probing.cliquereductionfactor = 3: number of reductions per variable in probed clique to deem clique probing successful (PAPILO_API_VERSION 12)
- probing.minabortedvariables = 0: minimum number of variables left in clique before we consider abort probing on the clique (PAPILO_API_VERSION 12)
- probing.numcliquefails = 0: number of times clique probing may fail before being disabled (PAPILO_API_VERSION 12)

Data Structures
---------------

Build system
------------

Fixed bugs
----------

Miscellaneous
-------------


@page RN30 Release notes for PAPILO 3.0

@section RN301 PaPILO 3.0.1

Fixed bugs
----------


@section RN300 PaPILO 3.0.0

License changes
---------------

- The license of PaPILO has changed to the Apache License 2.0.

Features
--------------

- MPS Parser can now handle maximization problem (OBJSENSE MAX) (PAPILO_API_VERSION 11)

Interface changes
-----------------

### New API functions

- ProblemBuilder: setColImplIntAll() to set all implied integrality flags at once
- PresolveOptions: early_exit_callback if a calling program wants to forcefully stop PaPILO (PAPILO_API_VERSION 8)

### New parameters with default values
